--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "author": "Martin Drohmann <mcdrohmann@gmail.com> ",
   "license": "MIT",
   "dependencies": {
-    "atomizer": "^3.2.0",
+    "atomizer": "^3.2.0"
   },
   "devDependencies": {
     "babel-core": "^5.8.22",
